Added support for the creation of service restrictions at the PMM client screen